--- a/ten.css
+++ b/ten.css
@@ -1,10 +1,11 @@
-
+body{
+  background-color: #ebeced;
+}
 .smalltext{
-  font-style:cursive;
-  font-family:sans-serif;
+  font-family:swidth: 100%;
   font-style: italic;
-  font-size: 10px;
-  width:1000;
+  font-size: 15px;
+  width: 1000px;
 }
 div{
   padding-left:200px;
@@ -20,12 +21,19 @@ width: 125;
 line-height: 100%;
 padding-left: 15px;
 }
-
 .list{
-  width:150;
-  height:100;
-  border:2px black solid;
-  font-size:40px;
-  line-height: 30px;
+  height:70px;
+  width:150px;
+  margin-bottom: 20px;
+  display:block;
+  border: 8px solid white;
+  padding:35px;
+  background-color: lightblue;
+  font-size: 20px;
+  line-height: normal;
+
+}
+#two{
+  height:auto;
 
 }
