--- a/templates/home.html
+++ b/templates/home.html
@@ -1,10 +1,10 @@
 <html>
   <head>
     <title> Blogasaurus</title>
-    <link rel="stylesheet" href="home.css">
+    <link rel="stylesheet" href="/resources/home.css">
   </head>
   <body>
-    <center><h3 id= 'firstline'><a href="ten.html">Ten Things About Me</a></h3></center>
+    <center><h3 id= 'firstline'><a href="/ten">Ten Things About Me</a></h3></center>
     <center><h3><a href=”cssi-google.html”>Google CSSI Pics</a></h3></center>
     <center><h3><a href=”senior-pics.html”></a>Senior Poland Pictures</a></h3></center>
     <center><h3><a href=”senior-pics.html”></a>The Israel Experience</a></h3></center>
