--- a/templates/ten.html
+++ b/templates/ten.html
@@ -1,23 +1,41 @@
 <html>
  <head>
    <title>About Me</title>
-   <link rel = "stylesheet" href="ten.css">
+   <link rel = "stylesheet" href="/resources/ten.css">
  </head>
  <body>
    <div class='smalltext'><h4>
      To be yourself in a world that is constantly trying to make you something else is the greatest accomplishment
    </h4></div>
+   <div id = box>
    <div id= 'ten'><h1>
      10
    </h1></div>
    <div class= 'things'>
      Things About Myself
    </div>
-   <div class= 'list' id = 'one'>
-   I have quite a large family- 10 siblings to be exact!
+ </div>
+
+   <div class= 'list'>
    </div>
-   <div class= 'list' id = 'two'>
-   I went on the Whole30 for 6 months: NO SUGAR; NO WHEAT; NO DAIRY
+   <div class= 'list'>
+   </div>
+   <div class= 'list'>
+   </div>
+   <div class= 'list'>
+   </div>
+   <div class= 'list'>
+   </div>
+   <div class= 'list'>
+   </div>
+   <div class= 'list'>
+   </div>
+   <div class= 'list'>
+   </div>
+   <div class= 'list'>
+   </div>
+   <div class= 'list'>
+   </div>
    <script src = 'ten.js'></script>
    <script src="jquery-3.2.1.min.js"></script>
  </body>
